<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:gravity="right|bottom"
        android:lines="3"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <GridLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"  android:layout_height="0dp">

        <!--        第一行-->
        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/clear_key"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/backspace"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/divide_key"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <!--        第二行-->
        <Button
            android:id="@+id/number_7"
            android:layout_width="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_7"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_8"
            android:layout_width="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_8"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_9"

            android:layout_width="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_9"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/multiply"

            android:layout_width="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/multiply_key"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <!--        第三行-->
        <Button
            android:id="@+id/number_4"

            android:layout_width="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_4"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_5"

            android:layout_width="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_5"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_6"
            android:layout_width="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_6"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/subtract_key"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <!--        第四行-->
        <Button
            android:id="@+id/number_1"
            android:layout_width="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_1"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_2"
            android:layout_width="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_2"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_3"
            android:layout_width="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_3"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/add_key"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/change"
            android:layout_width="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/change"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/number_0"
            android:layout_width="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/number_key_0"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/decimal_key"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button"
            android:text="@string/equals_key"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>